--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -155,8 +155,8 @@ else
                 </td>
             </tr>
             @{
-                long numFatalIssue = HlidacStatu.Lib.ES.SearchTools.SimpleSearch($"ico:{Model.ICO} AND chyby:zasadni", 0, 0, HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll).Total;
-                long numVazneIssue = HlidacStatu.Lib.ES.SearchTools.SimpleSearch($"ico:{Model.ICO} AND chyby:vazne", 0, 0, HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll).Total;
+                var numFatalIssue = HlidacStatu.Lib.ES.SearchTools.SimpleSearch($"ico:{Model.ICO} AND chyby:zasadni", 0, 0, HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, exactNumOfResults: true).Result.HitsMetadata.Total;
+                var numVazneIssue = HlidacStatu.Lib.ES.SearchTools.SimpleSearch($"ico:{Model.ICO} AND chyby:vazne", 0, 0, HlidacStatu.Lib.ES.SearchTools.OrderResult.FastestForScroll, exactNumOfResults: true).Result.HitsMetadata.Total;
             }
             <tr>
                 <th>Obsah stránky</th>
@@ -195,19 +195,28 @@ else
                     </script>
                 </td>
             </tr>
-            @if (numFatalIssue + numVazneIssue > 0)
+            @if (numFatalIssue.Value + numVazneIssue.Value > 0)
             {
                 <tr>
                     <td colspan="2">
                         <h3 id="_pravni_problemy" class="text-danger">Problémy a varování</h3>
                         <ul>
-                            @if (numFatalIssue > 0)
+                            @if (numFatalIssue.Value > 0)
                             {
                                 <li>
                                     @Model.ObecneJmeno() má v registru smluv
                                     <span class="text-danger">
                                         <b>
-                                            <span style="font-size:130%">@Devmasters.Core.Lang.Plural.GetWithZero((int)numFatalIssue, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "{0:### ### ##0} smluv obsahujících ")</span>
+                                            <span style="font-size:130%">
+                                                @if (numFatalIssue.Relation == TotalHitsRelation.GreaterThanOrEqualTo)
+                                                {
+                                                    @Devmasters.Core.Lang.Plural.GetWithZero((int)numFatalIssue.Value, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "více než {0:### ### ##0} smluv obsahujících ")
+                                                }
+                                                else
+                                                {
+                                                    @Devmasters.Core.Lang.Plural.GetWithZero((int)numFatalIssue.Value, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "{0:### ### ##0} smluv obsahujících ")
+                                                }
+                                            </span>
                                             tak závažné nedostatky v rozporu se zákonem,
                                         </b>
                                     </span> že jsou velmi pravděpodobně neplatné.
@@ -216,10 +225,10 @@ else
 
                                 </li>
                             }
-                            @if (numVazneIssue > 0)
+                            @if (numVazneIssue.Value > 0)
                             {
                                 <li>
-                                    @if (numFatalIssue == 0)
+                                    @if (numFatalIssue.Value == 0)
                                     {
                                         <span>
                                             @Model.ObecneJmeno() má v registru smluv
@@ -229,10 +238,17 @@ else
                                     {
                                         <span>Současně má v registru smluv</span>
                                     }
-                                    <span class="text-danger">
-                                        @Devmasters.Core.Lang.Plural.GetWithZero((int)numVazneIssue, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "{0:### ### ##0} smluv obsahujících ")
-                                        vážné nedostatky
-                                    </span>.
+                                <span class="text-danger">
+                                    @if (numVazneIssue.Relation == TotalHitsRelation.GreaterThanOrEqualTo)
+                                    {
+                                        @Devmasters.Core.Lang.Plural.GetWithZero((int)numVazneIssue.Value, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "více než {0:### ### ##0} smluv obsahujících ")
+                                    }
+                                    else
+                                    {
+                                        @Devmasters.Core.Lang.Plural.GetWithZero((int)numVazneIssue.Value, "0 smluv", "jednu smlouvu obsahující", "{0} smlouvy obsahující", "{0:### ### ##0} smluv obsahujících ")
+                                    }
+                                    vážné nedostatky
+                                </span>.
 
                                     @Util.AddSearchBtn("/hledatsmlouvy", "ico:" + Model.ICO + " chyby:vazne", "Ukázat tyto smlouvy")
                                     @Util.AddWatchDog(this.User, "ico:" + Model.ICO + " chyby:vazne", typeof(HlidacStatu.Lib.Data.Smlouva), "Hlídat tyto smlouvy", "", prefillWDname: "Smlouvy s vážnými chybami pro " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false)
@@ -691,7 +707,7 @@ else
 
     if (insRes.IsValid && insRes.Total > 0)
     {
-        tabs.Add($"V insolvenčním rejstříku ({Util.PocetVysledku(insRes.Total)})");
+        tabs.Add($"V insolvenčním rejstříku ({HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(insRes.Total)})");
         results.Add(
             SearchResults.InsolvenceTableResult(this.User, this.Request, 5, insRes).ToHtmlString()
         );
@@ -699,18 +715,18 @@ else
 
     if (resVZ.IsValid && resVZ.Total > 0)
     {
-        tabs.Add($"Účast ve veřejných zakázkách ({Util.PocetVysledku(resVZ.Total)})");
+        tabs.Add($"Účast ve veřejných zakázkách ({HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(resVZ.Total)})");
         results.Add(
             SearchResults.VZTableResult(this.User, this.Request, 5, resVZ, true).ToHtmlString()
         );
     }
-    var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO,true);
+    var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO, true);
     var dsSearch = HlidacStatu.Lib.Data.Search.DatasetMultiQueryMultiResult.GeneralSearch(queries, 1, 5);
     if (dsSearch.IsValid && dsSearch.Total > 0)
     {
         foreach (var dss in dsSearch.Results.Where(r => r.Total > 0))
         {
-            tabs.Add($"{dss.DataSet.Registration().name} ({Util.PocetVysledku(dss.Total)})");
+            tabs.Add($"{dss.DataSet.Registration().name} ({HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(dss.Total)})");
             results.Add(dss.RenderResultsInHtml(dss.Q, 5));
         }
     }
