--- a/Web.Statu/Views/Ucty/Hledat.cshtml
+++ b/Web.Statu/Views/Ucty/Hledat.cshtml
@@ -49,81 +49,82 @@
 
 
 
-    <div class="row">
-        @if (bu != null)
-        {
+<div class="row">
+    @if (bu != null)
+    {
+        <div class="col-xs-12">
+            <h2>Hledání pro @bu.CisloUctu - @bu.TypUctu.ToNiceDisplayName()</h2>
+            <div>
+                @bu.Nazev
+                <div class="pull-right"><a href="https://www.hlidacstatu.cz/api/v1/ucetexport?id=@(System.Net.WebUtility.UrlEncode(bu.CisloUctu))" target="_blank">Export do JSON</a></div>
+            </div>
+        </div>
+    }
+    <div>&nbsp;</div>
+    <div class="clearfix"></div>
+    @if (polozky.Count() == 0)
+    {
+        <h2>Žádné transakce jsme nenalezli.</h2>
+    }
+    else
+    {
+        <h3>@(HlidacStatu.Util.RenderData.Vysledky.NasliJsmeVysledky(polozky.Count(), HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)) na výraz <span class="emphasized">@Model.Query</span>.</h3>
+        @*<h2>Nalezli jsme @HlidacStatu.Util.PluralForm.Get(polozky.Count(), "{0} transakci;{0} transakce;{0} transakcí").</h2>*@
+
+        <table class="table table-hover">
+
+            @SearchResults.UcetHeader(bu, bu == null)
+            <tbody>
+                @foreach (var p in polozky.OrderByDescending(m => m.Datum))
+                {
+                    @SearchResults.UcetRow(this.User, p, bu == null, true)
+                }
+            </tbody>
+        </table>
+
+        <div class="row" style="padding-top:50px;">
             <div class="col-xs-12">
-                <h2>Hledání pro @bu.CisloUctu - @bu.TypUctu.ToNiceDisplayName()</h2>
-                <div>
-                    @bu.Nazev
-                    <div class="pull-right"><a href="https://www.hlidacstatu.cz/api/v1/ucetexport?id=@(System.Net.WebUtility.UrlEncode(bu.CisloUctu))" target="_blank">Export do JSON</a></div>
+                <div class="bs-callout bs-callout-success">
+                    <h4>Statistiky pro hledaní <b>@Model.Query</b></h4>
+                    <p>
+                        <table class="table table-striped ">
+                            <tr>
+                                <td>Celkový příjem peněz</td>
+                                <td><strong>@polozky.Where(m => m.Castka > 0).Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč</td>
+                            </tr>
+                            <tr>
+                                <td>Celkový výdej peněz</td>
+                                <td><strong>@polozky.Where(m => m.Castka < 0).Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč</td>
+                            </tr>
+                            <tr>
+                                <td>Příjem podle účtů</td>
+                                <td>
+                                    @foreach (var p in polozky.Where(m => m.Castka > 0 && m.BU != null).GroupBy(k => k.BU.CisloUctu))
+                                    {
+
+                                        <div><a href="@p.First().BU.GetUrl()">@p.Key</a> (@p.First().BU.Subjekt) : <strong>@p.Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč </div>
+                                    }
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Příjem podle subjektů</td>
+                                <td>
+                                    @foreach (var p in polozky.Where(m => m.Castka > 0 && m.BU != null).GroupBy(k => k.BU.Subjekt))
+                                    {
+
+                                        <div><a href="@p.First().BU.GetSubjektUrl()">@p.Key</a> : <strong>@p.Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč </div>
+                                    }
+                                </td>
+                            </tr>
+                        </table>
+                    </p>
                 </div>
             </div>
-        }
-        <div>&nbsp;</div>
-        <div class="clearfix"></div>
-        @if (polozky.Count() == 0)
-        {
-            <h2>Žádné transakce jsme nenalezli.</h2>
-        }
-        else
-        {
-            <h2>Nalezli jsme @HlidacStatu.Util.PluralForm.Get(polozky.Count(), "{0} transakci;{0} transakce;{0} transakcí").</h2>
+        </div>
 
-            <table class="table table-hover">
+    }
 
-                @SearchResults.UcetHeader(bu, bu == null)
-                <tbody>
-                    @foreach (var p in polozky.OrderByDescending(m => m.Datum))
-                    {
-                        @SearchResults.UcetRow(this.User, p, bu == null, true)
-                    }
-                </tbody>
-            </table>
-
-            <div class="row" style="padding-top:50px;">
-                <div class="col-xs-12">
-                    <div class="bs-callout bs-callout-success">
-                        <h4>Statistiky pro hledaní <b>@Model.Query</b></h4>
-                        <p>
-                            <table class="table table-striped ">
-                                <tr>
-                                    <td>Celkový příjem peněz</td>
-                                    <td><strong>@polozky.Where(m => m.Castka > 0).Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč</td>
-                                </tr>
-                                <tr>
-                                    <td>Celkový výdej peněz</td>
-                                    <td><strong>@polozky.Where(m => m.Castka < 0).Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč</td>
-                                </tr>
-                                <tr>
-                                    <td>Příjem podle účtů</td>
-                                    <td>
-                                        @foreach (var p in polozky.Where(m => m.Castka > 0 && m.BU != null).GroupBy(k => k.BU.CisloUctu))
-                                        {
-
-                                            <div><a href="@p.First().BU.GetUrl()">@p.Key</a> (@p.First().BU.Subjekt) : <strong>@p.Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč </div>
-                                        }
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Příjem podle subjektů</td>
-                                    <td>
-                                        @foreach (var p in polozky.Where(m => m.Castka > 0 && m.BU != null).GroupBy(k => k.BU.Subjekt))
-                                        {
-
-                                            <div><a href="@p.First().BU.GetSubjektUrl()">@p.Key</a> : <strong>@p.Sum(m => m.Castka).ToString("N", HlidacStatu.Util.Consts.czCulture)</strong> Kč </div>
-                                        }
-                                    </td>
-                                </tr>
-                            </table>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-        }
-
-    </div>
+</div>
 
 
 
