--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -450,55 +450,55 @@
 {
     HlidacStatu.Lib.Data.Firma firma = HlidacStatu.Lib.Data.Firmy.Get(subjekt.ico);
     <p>
-        <b>@subjekt.nazev</b>&nbsp;&nbsp;&nbsp;
-        @Util.FirmaMoreInfoLinks(subjekt.ico)
+        <a href="/subjekt/@subjekt.ico">
+            <b>@subjekt.nazev</b></a>&nbsp;&nbsp;&nbsp;@Util.FirmaMoreInfoLinks(subjekt.ico)
 
-        <br />
-        @Util.IfExists(subjekt.utvar, subjekt.utvar + "<br />")
-
-        @subjekt.adresa<br />
-        @if (!string.IsNullOrEmpty(subjekt.ico))
-        {
-            <text>
-                ICO <a href="/subjekt/@subjekt.ico">@subjekt.ico</a>
-            </text>
-        }
-        @if (!string.IsNullOrEmpty(subjekt.datovaSchranka))
-        {
-            <text>
-                &nbsp;dat.schránka @subjekt.datovaSchranka
-            </text>
-        }
-
-
-        @if (typSubjektu == 1)
-        {
-            <text>
-                <br />Plátce peněz
-            </text>
-        }
-        else if (typSubjektu == 2)
-        {
-            <text>
-                <br />Příjemce peněz
-                <div>@Util.RenderSearchLinkBetweenSubjects(Model.Platce?.ico, subjekt.ico)</div>
-            </text>
-        }
-        else if (typSubjektu == 3) //vkladatel do rejstriku
-        {
-            <text>
-            </text>
-        }
-        @if (firma != null && firma.IsNespolehlivyPlatceDPH())
-        {
-            <div><span class="text-danger"><span class="glyphicon glyphicon-exclamation-sign"></span>Nespolehlivý plátce DPH</span> (<a href="@firma.GetUrl(false)">více</a>)</div>
-        }
-
-
-        @if (!string.IsNullOrEmpty(subjekt.ico))
-        {
             <br />
-        }
-    </p>
+            @Util.IfExists(subjekt.utvar, subjekt.utvar + "<br />")
+
+            @subjekt.adresa<br />
+            @if (!string.IsNullOrEmpty(subjekt.ico))
+            {
+                <text>
+                    ICO <a href="/subjekt/@subjekt.ico">@subjekt.ico</a>
+                </text>
+            }
+            @if (!string.IsNullOrEmpty(subjekt.datovaSchranka))
+            {
+                <text>
+                    &nbsp;dat.schránka @subjekt.datovaSchranka
+                </text>
+            }
+
+
+            @if (typSubjektu == 1)
+            {
+                <text>
+                    <br />Plátce peněz
+                </text>
+            }
+            else if (typSubjektu == 2)
+            {
+                <text>
+                    <br />Příjemce peněz
+                    <div>@Util.RenderSearchLinkBetweenSubjects(Model.Platce?.ico, subjekt.ico)</div>
+                </text>
+            }
+            else if (typSubjektu == 3) //vkladatel do rejstriku
+            {
+                <text>
+                </text>
+            }
+            @if (firma != null && firma.IsNespolehlivyPlatceDPH())
+            {
+                <div><span class="text-danger"><span class="glyphicon glyphicon-exclamation-sign"></span>Nespolehlivý plátce DPH</span> (<a href="@firma.GetUrl(false)">více</a>)</div>
+            }
+
+
+            @if (!string.IsNullOrEmpty(subjekt.ico))
+            {
+                <br />
+            }
+</p>
 }
 
