--- a/Web.Statu/Views/ApiV1/OCRStat.cshtml
+++ b/Web.Statu/Views/ApiV1/OCRStat.cshtml
@@ -9,7 +9,7 @@
     .LocalMemory.LocalMemoryCache<string>(TimeSpan.FromMinutes(2), "Ocrstat.data.json",
         (o) =>
         {
-            return new WebClient().DownloadString("http://ocr.hlidacstatu.cz/stats.ashx");
+            return new WebClient().DownloadString("https://ocr.hlidacstatu.cz/stats.ashx");
         });
 
 
