--- a/Web.Statu/Content/new.css
+++ b/Web.Statu/Content/new.css
@@ -2868,6 +2868,10 @@ a.form-search__hint:active:focus {
     margin-bottom: 10px;
 }
 
+.hover-background:hover {
+    background-color: #f5f5f5;
+}
+
 @media (max-width: 991px) {
     .box-cta::after {
         content: none;
