--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -83,7 +83,7 @@
     }
     else
     {
-        count = 0; 
+        count = 0;
         foreach (var ds in datasets.Where(m => m.betaversion == true))
         {
             count++;
@@ -158,15 +158,14 @@
 @helper RenderDatasets2(IEnumerable<HlidacStatu.Lib.Data.External.DataSets.Registration> dss, string email)
 {
     int count = 0;
-    <table class="table table-hover">
-        <tbody>
-            @foreach (var ds in dss)
-            {
-                count++;
-                @RenderDataset2(ds, email, count, "default")
-            }
-        </tbody>
-    </table>
+
+    foreach (var ds in dss)
+    {
+        count++;
+        <div class="row  hover-background" style="border:0;border-bottom: 1px solid #ddd;padding: 15px 10px;">
+            @RenderDataset2(ds, email, count, "default")
+        </div>
+    }
 }
 
 @helper RenderDataset2(HlidacStatu.Lib.Data.External.DataSets.Registration ds, string email, int count, string style)
@@ -183,30 +182,29 @@
         {
             return; //don't show empty or near to empty datasets, which are not "my".
         }
+<div  style="padding: 10px 0 30px 0">
+        <div class="col-xs-12 col-sm-offset-1 col-sm-7" style="font-size:19px">
+            <a href="/data/Index/@dsContent.DatasetId"><b>@ds.name</b></a>
+        </div>
+    <div class="clearfix" style="padding-bottom:10px;"></div>
+        <div class="col-xs-12 col-sm-offset-1 col-sm-7">
+            @if (!string.IsNullOrEmpty(ds.description))
+            {
+                @(Devmasters.Core.TextUtil.ShortenText(ds.description.ToString(), 240, "..."))
+            }
+        </div>
+        <div class="col-xs-2 col-sm-2 text-muted">
+            <b>@Html.Raw(HlidacStatu.Util.RenderData.NiceNumber(recordNum, true))</b>&nbsp;záznamů
+            @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)recordNumWeek, "", ", jeden&nbsp;nový", ", {0}&nbsp;nové", ", {0:### ### ###}&nbsp;nových"))
+        </div>
 
-        <tr>
-            <td style="font-weight:bold;font-size:16px;line-height:19px;">
-                <a href="/data/Index/@dsContent.DatasetId"><b>@ds.name</b></a>
-            </td>
-            <td style="text-align:right">
-                <b>@Html.Raw(HlidacStatu.Util.RenderData.NiceNumber(recordNum, true))</b>&nbsp;záznamů
-                @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)recordNumWeek,"","<br/>jeden&nbsp;nový","<br/>{0}&nbsp;nové","<br/>{0:### ### ###}&nbsp;nových"))
-            </td>
-
-            <td>
-                @if (!string.IsNullOrEmpty(ds.description))
-                {
-                    @(Devmasters.Core.TextUtil.ShortenText(ds.description.ToString(), 240, "..."))
-                }
-            </td>
-
-            <td>
-                @if (showEditBtn)
-                {
-                    <a href="/data/Manage/@dsContent.DatasetId" class="btn btn-info btn-sm" alt="Nastavení datasetu" title="Nastavení datasetu"><i class="far fa-cog"></i> Nastavení</a>
-                }
-            </td>
-        </tr>
+        <div class="col-xs-12  col-sm-2">
+            @if (showEditBtn)
+            {
+                <a href="/data/Manage/@dsContent.DatasetId" class="btn btn-info btn-sm" alt="Nastavení datasetu" title="Nastavení datasetu"><i class="far fa-cog"></i> Nastavení</a>
+            }
+        </div>
+</div>
     }
     catch (Exception)
     {
