--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -310,7 +310,7 @@
             {
                 <tr>
                     <td>
-                        Právní rámec smlouvy vzhledem <a href="/O-Registru">k platnosti registru smluv</a>
+                        Právní rámec smlouvy vzhledem <a href="/texty/O-Registru">k platnosti registru smluv</a>
                     </td>
                     <td>
                         @switch (Model.PravniRamec)
