--- a/Web.Statu/Views/Home/PridatSe.cshtml
+++ b/Web.Statu/Views/Home/PridatSe.cshtml
@@ -2,7 +2,7 @@
 @using System.ComponentModel.DataAnnotations
 
 @{
-    ViewBag.Title = "Přidejte se, pomožte nám!";
+    ViewBag.Title = "Přidejte se, pomozte nám!";
     ViewBag.SubTitle = "Vítáme pomoc detektivní, programátorskou, právní, analytickou, redakční i všechnu ostatní, anebo finanční příspěvěk.";
 
     Html.EnableClientValidation();
