--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -118,7 +118,7 @@
 
             <p>
                 <a href="https://www.darujme.cz/projekt/1200384" class="btn btn-primary" target="_blank">
-                    Pomožte nám i vy
+                    Pomozte nám i vy
                 </a>
             </p>
         </div>
