--- a/Web.Statu/Views/Data/_new.cshtml
+++ b/Web.Statu/Views/Data/_new.cshtml
@@ -10,7 +10,7 @@
             Anebo se <a onclick="return trackOutLink(this,'data');" href="https://platforma.hlidacstatu.cz/t/datove-zdroje-vhodne-pro-zpracovani-tipy-a-napady/320" target="_blank">koukněte na nápady ostatních</a>.
         </p>
         <p>
-            Chybí vám zde nějaká data? <a onclick="return trackOutLink(this,'data');" href="/api">Přidejte je a pomožte i ostatním, je to snadné</a>.
+            Chybí vám zde nějaká data? <a onclick="return trackOutLink(this,'data');" href="/api">Přidejte je a pomozte i ostatním, je to snadné</a>.
 
         </p>
     </div>
