--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -47,7 +47,8 @@
 </div>
 
 <div class="row">
-    @if (!string.IsNullOrWhiteSpace(Request.QueryString["beta"]))
+    @*!string.IsNullOrWhiteSpace(Request.QueryString["beta"])*@
+    @if (true)
     {
         @RenderDatasets2(datasets.Where(m => m.betaversion == false), email)
     }
@@ -76,7 +77,7 @@
         </div>
 
     </div>
-    @if (!string.IsNullOrWhiteSpace(Request.QueryString["beta"]))
+    @if (true)
     {
         <div style="padding-top:15px;"></div>
         @RenderDatasets2(datasets.Where(m => m.betaversion == true), email)
@@ -157,18 +158,14 @@
 
 @helper RenderDatasets2(IEnumerable<HlidacStatu.Lib.Data.External.DataSets.Registration> dss, string email)
 {
-    int count = 0;
 
     foreach (var ds in dss)
     {
-        count++;
-        <div class="row  hover-background" style="border:0;border-bottom: 1px solid #ddd;padding: 15px 10px;">
-            @RenderDataset2(ds, email, count, "default")
-        </div>
+        @RenderDataset2(ds, email, "default")
     }
 }
 
-@helper RenderDataset2(HlidacStatu.Lib.Data.External.DataSets.Registration ds, string email, int count, string style)
+@helper RenderDataset2(HlidacStatu.Lib.Data.External.DataSets.Registration ds, string email, string style)
 {
     try
     {
@@ -182,29 +179,33 @@
         {
             return; //don't show empty or near to empty datasets, which are not "my".
         }
-<div  style="padding: 10px 0 30px 0">
-        <div class="col-xs-12 col-sm-offset-1 col-sm-7" style="font-size:19px">
-            <a href="/data/Index/@dsContent.DatasetId"><b>@ds.name</b></a>
-        </div>
-    <div class="clearfix" style="padding-bottom:10px;"></div>
-        <div class="col-xs-12 col-sm-offset-1 col-sm-7">
-            @if (!string.IsNullOrEmpty(ds.description))
-            {
-                @(Devmasters.Core.TextUtil.ShortenText(ds.description.ToString(), 240, "..."))
-            }
-        </div>
-        <div class="col-xs-2 col-sm-2 text-muted">
-            <b>@Html.Raw(HlidacStatu.Util.RenderData.NiceNumber(recordNum, true))</b>&nbsp;záznamů
-            @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)recordNumWeek, "", ", jeden&nbsp;nový", ", {0}&nbsp;nové", ", {0:### ### ###}&nbsp;nových"))
+        <div class="row  hover-background" style="border:0;border-bottom: 1px solid #ddd;padding: 15px 10px;">
+
+            <div style="padding: 10px 0 30px 0">
+                <div class="col-xs-12 col-sm-offset-1 col-sm-7" style="font-size:19px">
+                    <a href="/data/Index/@dsContent.DatasetId"><b>@ds.name</b></a>
+                </div>
+                <div class="clearfix" style="padding-bottom:10px;"></div>
+                <div class="col-xs-12 col-sm-offset-1 col-sm-7">
+                    @if (!string.IsNullOrEmpty(ds.description))
+                    {
+                        @(Devmasters.Core.TextUtil.ShortenText(ds.description.ToString(), 240, "..."))
+                    }
+                </div>
+                <div class="col-xs-2 col-sm-2 text-muted">
+                    <b>@Html.Raw(HlidacStatu.Util.RenderData.NiceNumber(recordNum, true))</b>&nbsp;záznamů
+                    @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)recordNumWeek, "", ", jeden&nbsp;nový", ", {0}&nbsp;nové", ", {0:### ### ###}&nbsp;nových"))
+                </div>
+
+                <div class="col-xs-12  col-sm-2">
+                    @if (showEditBtn)
+                    {
+                        <a href="/data/Manage/@dsContent.DatasetId" class="btn btn-info btn-sm" alt="Nastavení datasetu" title="Nastavení datasetu"><i class="far fa-cog"></i> Nastavení</a>
+                    }
+                </div>
+            </div>
         </div>
 
-        <div class="col-xs-12  col-sm-2">
-            @if (showEditBtn)
-            {
-                <a href="/data/Manage/@dsContent.DatasetId" class="btn btn-info btn-sm" alt="Nastavení datasetu" title="Nastavení datasetu"><i class="far fa-cog"></i> Nastavení</a>
-            }
-        </div>
-</div>
     }
     catch (Exception)
     {
